--- a/template.tml
+++ b/template.tml
@@ -1,5 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
+Description: Course: CI/CD with Jenkins and CircleCI
 
 Parameters:
   Environment:
@@ -11,7 +12,7 @@ Resources:
     Properties:
       FunctionName: !Sub "circle-ci-service-${Environment}"
       Handler: index.handler
-      Runtime: nodejs18.x
+      Runtime: nodejs20.x
       CodeUri: src/
       Environment:
         Variables:
@@ -21,6 +22,6 @@ Resources:
 
 Outputs:
   CircleCiFunctionUrl:
-    Description: "Circle Ci Lambda Function URL"
+    Description: "CircleCI 2024 Lambda Function URL"
     Value:
       Fn::GetAtt: CircleCiFunction.FunctionUrl
